rename webservice for consistency
