# server/api/project/create_zone_volume.go
@@ -1,69 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package project
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime/middleware"
-)
-
-// CreateZoneVolumeHandlerFunc turns a function with the right signature into a create zone volume handler
-type CreateZoneVolumeHandlerFunc func(CreateZoneVolumeParams, interface{}) middleware.Responder
-
-// Handle executing the request and returning a response
-func (fn CreateZoneVolumeHandlerFunc) Handle(params CreateZoneVolumeParams, principal interface{}) middleware.Responder {
-	return fn(params, principal)
-}
-
-// CreateZoneVolumeHandler interface for that can handle valid create zone volume params
-type CreateZoneVolumeHandler interface {
-	Handle(CreateZoneVolumeParams, interface{}) middleware.Responder
-}
-
-// NewCreateZoneVolume creates a new http.Handler for the create zone volume operation
-func NewCreateZoneVolume(ctx *middleware.Context, handler CreateZoneVolumeHandler) *CreateZoneVolume {
-	return &CreateZoneVolume{Context: ctx, Handler: handler}
-}
-
-/*
-	CreateZoneVolume swagger:route POST /project/{projectId}/zone/{zoneId}/volume project zone volume createZoneVolume
-
-Creates a new storage volume in specified zone.
-*/
-type CreateZoneVolume struct {
-	Context *middleware.Context
-	Handler CreateZoneVolumeHandler
-}
-
-func (o *CreateZoneVolume) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
-	route, rCtx, _ := o.Context.RouteInfo(r)
-	if rCtx != nil {
-		*r = *rCtx
-	}
-	var Params = NewCreateZoneVolumeParams()
-	uprinc, aCtx, err := o.Context.Authorize(r, route)
-	if err != nil {
-		o.Context.Respond(rw, r, route.Produces, route, err)
-		return
-	}
-	if aCtx != nil {
-		*r = *aCtx
-	}
-	var principal interface{}
-	if uprinc != nil {
-		principal = uprinc.(interface{}) // this is really a interface{}, I promise
-	}
-
-	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
-		o.Context.Respond(rw, r, route.Produces, route, err)
-		return
-	}
-
-	res := o.Handler.Handle(Params, principal) // actually handle the request
-	o.Context.Respond(rw, r, route.Produces, route, res)
-
-}
